Teasers: Collection's labels

--- a/pi1/language/language.json
+++ b/pi1/language/language.json
@@ -443,162 +443,165 @@
   
   "collections": {
     "en": {
-		"Sal 100":	"collections",
-		"Sal 111":	"collections",
-		"Sal 114":	"collections",
-		"Sal 116":	"collections",
-		"Sal 120":	"collections",
-		"Sal 200":	"collections",
-		"Sal 201A":	"collections",
-		"Sal 201B":	"collections",
-		"Sal 201C":	"collections",
-		"Sal 201D":	"collections",
-		"Sal 201E":	"collections",
-		"Sal 202 før 2006":	"collections",
-		"Sal 202":	"collections",
-		"Sal 203":	"collections",
-		"Sal 204":	"collections",
-		"Sal 205":	"collections",
-		"Sal 206":	"collections",
-		"Sal 207":	"collections",
-		"Sal 208A":	"collections",
-		"Sal 208B":	"collections",
-		"Sal 209 ":	"collections",
-		"Sal 210A":	"collections",
-		"Sal 210B":	"collections",
-		"Sal 211A":	"collections",
-		"Sal 211B":	"collections",
-		"Sal 212":	"collections",
-		"Sal 213":	"collections",
-		"Sal 214":	"collections",
-		"Sal 215":	"collections",
-		"Sal 216":	"collections",
-		"Sal 217A":	"collections",
-		"Sal 217B":	"collections",
-		"Sal 217C":	"collections",
-		"Sal 217D":	"collections",
-		"Sal 217E":	"collections",
-		"Sal 217F":	"collections",
-		"Sal 218A":	"collections",
-		"Sal 218B":	"collections",
-		"Sal 219":	"collections",
-		"Sal 220":	"collections",
-		"Sal 221":	"collections",
-		"Sal 222":	"collections",
-		"Sal 223":	"collections",
-		"Sal 224":	"collections",
-		"Sal 225":	"collections",
-		"Sal 226":	"collections",
-		"Sal 227":	"collections",
-		"Sal 228":	"collections",
-		"Sal 229":	"collections",
-		"Sal 260":	"collections",
-		"Sal 261":	"collections",
-		"Sal 262":	"collections",
-		"Sal 263A":	"collections",
-		"Sal 263B":	"collections",
-		"Sal 263C":	"collections",
-		"Sal 264":	"collections",
-		"Sal 264A 2006 - 2011":	"collections",
-		"Sal 265":	"collections",
-		"Sal 266":	"collections",
-		"Sal 268A":	"collections",
-		"Sal 268B":	"collections",
-		"Sal 269A":	"collections",
-		"Sal 269B":	"collections",
-		"Sal 270A":	"collections",
-		"Sal 270B":	"collections",
-		"Sal 272":	"collections",
-		"Sal 300A":	"collections",
-		"Sal 300B":	"collections",
-		"Sal 301A":	"collections",
-		"Sal 301B":	"collections",
-		"Sal 301C":	"collections",
-		"Sal 301D":	"collections",
-		"Sal 302A":	"collections",
-		"Sal 302B":	"collections",
-		"Sal 302C":	"collections",
+		"Sal 100":	"Information area",
+		"Sal 111":	"Conservators work space",
+		"Sal 114":	"x-rummet",
+		"Sal 116":	"The children’s exhibition",
+		"Sal 120":	"Special exhibition",
+		"Sal 200":	"Corridor",
+		"Sal 201A":	"European Art 1300-1800",
+		"Sal 201B":	"European Art 1300-1801",
+		"Sal 201C":	"European Art 1300-1802",
+		"Sal 201D":	"European Art 1300-1803",
+		"Sal 201E":	"European Art 1300-1804",
+		"Sal 202 foer 2006":      "European Art 1300-1805",
+		"Sal 202":	"European Art 1300-1806",
+		"Sal 203":	"European Art 1300-1807",
+		"Sal 204":	"European Art 1300-1808",
+		"Sal 205":	"European Art 1300-1809",
+		"Sal 206":	"European Art 1300-1810",
+		"Sal 207":	"European Art 1300-1811",
+		"Sal 208A":	"European Art 1300-1812",
+		"Sal 208B":	"European Art 1300-1813",
+		"Sal 209 ":	"European Art 1300-1814",
+		"Sal 210A":	"European Art 1300-1815",
+		"Sal 210B":	"European Art 1300-1816",
+		"Sal 211A":	"European Art 1300-1817",
+		"Sal 211B":	"European Art 1300-1818",
+		"Sal 212":	"French Art 1900-1930",
+		"Sal 213":	"French Art 1900-1931",
+		"Sal 214":	"French Art 1900-1932",
+		"Sal 215":	"French Art 1900-1933",
+		"Sal 216":	"French Art 1900-1934",
+		"Sal 217A":	"Danish and Nordic Art 1750-1900",
+		"Sal 217B":	"Danish and Nordic Art 1750-1901",
+		"Sal 217C":	"Danish and Nordic Art 1750-1902",
+		"Sal 217D":	"Danish and Nordic Art 1750-1903",
+		"Sal 217E":	"Danish and Nordic Art 1750-1904",
+		"Sal 217F":	"Danish and Nordic Art 1750-1905",
+		"Sal 218A":	"Danish and Nordic Art 1750-1906",
+		"Sal 218B":	"Danish and Nordic Art 1750-1907",
+		"Sal 219":	"Danish and Nordic Art 1750-1908",
+		"Sal 220":	"Danish and Nordic Art 1750-1909",
+		"Sal 221":	"Danish and Nordic Art 1750-1910",
+		"Sal 222":	"Danish and Nordic Art 1750-1911",
+		"Sal 223":	"Danish and Nordic Art 1750-1912",
+		"Sal 224":	"Danish and Nordic Art 1750-1913",
+		"Sal 225":	"Danish and Nordic Art 1750-1914",
+		"Sal 226":	"Danish and Nordic Art 1750-1915",
+		"Sal 227":	"Danish and Nordic Art 1750-1916",
+		"Sal 228":	"Danish and Nordic Art 1750-1917",
+		"Sal 229":	"Danish and Nordic Art 1750-1918",
+		"Sal 260":	"Danish and International Art after 1900",
+		"Sal 261":	"Danish and International Art after 1901",
+		"Sal 262":	"Danish and International Art after 1902",
+		"Sal 263A":	"Danish and International Art after 1903",
+		"Sal 263B":	"Danish and International Art after 1904",
+		"Sal 263C":	"Danish and International Art after 1905",
+		"Sal 264":	"Danish and International Art after 1906",
+		"Sal 264A 2006 - 2011":	"Danish and International Art after 1907",
+		"Sal 265":	"Danish and International Art after 1908",
+		"Sal 266":	"Danish and International Art after 1909",
+		"Sal 268A":	"Danish and International Art after 1910",
+		"Sal 268B":	"Danish and International Art after 1911",
+		"Sal 269A":	"Danish and International Art after 1912",
+		"Sal 269B":	"Danish and International Art after 1913",
+		"Sal 270A":	"Danish and International Art after 1914",
+		"Sal 270B":	"Danish and International Art after 1915",
+		"Sal 272":	"Danish and International Art after 1916",
+		"Sal 300A":	"Wilhelm Freddie Room",
+		"Sal 300B":	"Wilhelm Freddie Room",
+		"Sal 301A":	"Danish and International Art after 1900",
+		"Sal 301B":	"Danish and International Art after 1901",
+		"Sal 301C":	"Danish and International Art after 1902",
+		"Sal 301D":	"Danish and International Art after 1903",
+		"Sal 302A":	"Danish and International Art after 1904",
+		"Sal 302B":	"Danish and International Art after 1905",
+		"Sal 302C":	"Danish and International Art after 1906",
+				
 		"default":	"collections"
 				
 
     },
     "dk": {
-		
-		"Sal 100":	"samlinger",
-		"Sal 111":	"samlinger",
-		"Sal 114":	"samlinger",
-		"Sal 116":	"samlinger",
-		"Sal 120":	"samlinger",
-		"Sal 200":	"samlinger",
-		"Sal 201A":	"samlinger",
-		"Sal 201B":	"samlinger",
-		"Sal 201C":	"samlinger",
-		"Sal 201D":	"samlinger",
-		"Sal 201E":	"samlinger",
-		"Sal 202 før 2006":	"samlinger",
-		"Sal 202":	"samlinger",
-		"Sal 203":	"samlinger",
-		"Sal 204":	"samlinger",
-		"Sal 205":	"samlinger",
-		"Sal 206":	"samlinger",
-		"Sal 207":	"samlinger",
-		"Sal 208A":	"samlinger",
-		"Sal 208B":	"samlinger",
-		"Sal 209 ":	"samlinger",
-		"Sal 210A":	"samlinger",
-		"Sal 210B":	"samlinger",
-		"Sal 211A":	"samlinger",
-		"Sal 211B":	"samlinger",
-		"Sal 212":	"samlinger",
-		"Sal 213":	"samlinger",
-		"Sal 214":	"samlinger",
-		"Sal 215":	"samlinger",
-		"Sal 216":	"samlinger",
-		"Sal 217A":	"samlinger",
-		"Sal 217B":	"samlinger",
-		"Sal 217C":	"samlinger",
-		"Sal 217D":	"samlinger",
-		"Sal 217E":	"samlinger",
-		"Sal 217F":	"samlinger",
-		"Sal 218A":	"samlinger",
-		"Sal 218B":	"samlinger",
-		"Sal 219":	"samlinger",
-		"Sal 220":	"samlinger",
-		"Sal 221":	"samlinger",
-		"Sal 222":	"samlinger",
-		"Sal 223":	"samlinger",
-		"Sal 224":	"samlinger",
-		"Sal 225":	"samlinger",
-		"Sal 226":	"samlinger",
-		"Sal 227":	"samlinger",
-		"Sal 228":	"samlinger",
-		"Sal 229":	"samlinger",
-		"Sal 260":	"samlinger",
-		"Sal 261":	"samlinger",
-		"Sal 262":	"samlinger",
-		"Sal 263A":	"samlinger",
-		"Sal 263B":	"samlinger",
-		"Sal 263C":	"samlinger",
-		"Sal 264":	"samlinger",
-		"Sal 264A 2006 - 2011":	"samlinger",
-		"Sal 265":	"samlinger",
-		"Sal 266":	"samlinger",
-		"Sal 268A":	"samlinger",
-		"Sal 268B":	"samlinger",
-		"Sal 269A":	"samlinger",
-		"Sal 269B":	"samlinger",
-		"Sal 270A":	"samlinger",
-		"Sal 270B":	"samlinger",
-		"Sal 272":	"samlinger",
-		"Sal 300A":	"samlinger",
-		"Sal 300B":	"samlinger",
-		"Sal 301A":	"samlinger",
-		"Sal 301B":	"samlinger",
-		"Sal 301C":	"samlinger",
-		"Sal 301D":	"samlinger",
-		"Sal 302A":	"samlinger",
-		"Sal 302B":	"samlinger",
-		"Sal 302C":	"samlinger",		
+				
+		"Sal 100":	"Forhallen/information",
+		"Sal 111":	"Konservator v&aelig;rksted",
+		"Sal 114":	"x-rummet",
+		"Sal 116":	"B&oslash;rnenes udstilling",
+		"Sal 120":	"S&aelig;rudstilling",
+		"Sal 200":	"Rundgangen",
+		"Sal 201A":	"Europ&aelig;isk Kunst 1300-1800",
+		"Sal 201B":	"Europ&aelig;isk Kunst 1300-1801",
+		"Sal 201C":	"Europ&aelig;isk Kunst 1300-1802",
+		"Sal 201D":	"Europ&aelig;isk Kunst 1300-1803",
+		"Sal 201E":	"Europ&aelig;isk Kunst 1300-1804",
+		"Sal 202 foer 2006":      "Europ&aelig;isk Kunst 1300-1805",
+		"Sal 202":	"Europ&aelig;isk Kunst 1300-1806",
+		"Sal 203":	"Europ&aelig;isk Kunst 1300-1807",
+		"Sal 204":	"Europ&aelig;isk Kunst 1300-1808",
+		"Sal 205":	"Europ&aelig;isk Kunst 1300-1809",
+		"Sal 206":	"Europ&aelig;isk Kunst 1300-1810",
+		"Sal 207":	"Europ&aelig;isk Kunst 1300-1811",
+		"Sal 208A":	"Europ&aelig;isk Kunst 1300-1812",
+		"Sal 208B":	"Europ&aelig;isk Kunst 1300-1813",
+		"Sal 209 ":	"Europ&aelig;isk Kunst 1300-1814",
+		"Sal 210A":	"Europ&aelig;isk Kunst 1300-1815",
+		"Sal 210B":	"Europ&aelig;isk Kunst 1300-1816",
+		"Sal 211A":	"Europ&aelig;isk Kunst 1300-1817",
+		"Sal 211B":	"Europ&aelig;isk Kunst 1300-1818",
+		"Sal 212":	"Fransk Kunst 1900-1930",
+		"Sal 213":	"Fransk Kunst 1900-1931",
+		"Sal 214":	"Fransk Kunst 1900-1932",
+		"Sal 215":	"Fransk Kunst 1900-1933",
+		"Sal 216":	"Fransk Kunst 1900-1934",
+		"Sal 217A":	"Dansk og Nordisk Kunst 1750-1900",
+		"Sal 217B":	"Dansk og Nordisk Kunst 1750-1901",
+		"Sal 217C":	"Dansk og Nordisk Kunst 1750-1902",
+		"Sal 217D":	"Dansk og Nordisk Kunst 1750-1903",
+		"Sal 217E":	"Dansk og Nordisk Kunst 1750-1904",
+		"Sal 217F":	"Dansk og Nordisk Kunst 1750-1905",
+		"Sal 218A":	"Dansk og Nordisk Kunst 1750-1906",
+		"Sal 218B":	"Dansk og Nordisk Kunst 1750-1907",
+		"Sal 219":	"Dansk og Nordisk Kunst 1750-1908",
+		"Sal 220":	"Dansk og Nordisk Kunst 1750-1909",
+		"Sal 221":	"Dansk og Nordisk Kunst 1750-1910",
+		"Sal 222":	"Dansk og Nordisk Kunst 1750-1911",
+		"Sal 223":	"Dansk og Nordisk Kunst 1750-1912",
+		"Sal 224":	"Dansk og Nordisk Kunst 1750-1913",
+		"Sal 225":	"Dansk og Nordisk Kunst 1750-1914",
+		"Sal 226":	"Dansk og Nordisk Kunst 1750-1915",
+		"Sal 227":	"Dansk og Nordisk Kunst 1750-1916",
+		"Sal 228":	"Dansk og Nordisk Kunst 1750-1917",
+		"Sal 229":	"Dansk og Nordisk Kunst 1750-1918",
+		"Sal 260":	"Dansk og International Kunst efter 1900",
+		"Sal 261":	"Dansk og International Kunst efter 1901",
+		"Sal 262":	"Dansk og International Kunst efter 1902",
+		"Sal 263A":	"Dansk og International Kunst efter 1903",
+		"Sal 263B":	"Dansk og International Kunst efter 1904",
+		"Sal 263C":	"Dansk og International Kunst efter 1905",
+		"Sal 264":	"Dansk og International Kunst efter 1906",
+		"Sal 264A 2006 - 2011":	"Dansk og International Kunst efter 1907",
+		"Sal 265":	"Dansk og International Kunst efter 1908",
+		"Sal 266":	"Dansk og International Kunst efter 1909",
+		"Sal 268A":	"Dansk og International Kunst efter 1910",
+		"Sal 268B":	"Dansk og International Kunst efter 1911",
+		"Sal 269A":	"Dansk og International Kunst efter 1912",
+		"Sal 269B":	"Dansk og International Kunst efter 1913",
+		"Sal 270A":	"Dansk og International Kunst efter 1914",
+		"Sal 270B":	"Dansk og International Kunst efter 1915",
+		"Sal 272":	"Dansk og International Kunst efter 1916",
+		"Sal 300A":	"Wilhelm Freddie-Rum",
+		"Sal 300B":	"Wilhelm Freddie-Rum",
+		"Sal 301A":	"Dansk og International Kunst efter 1900",
+		"Sal 301B":	"Dansk og International Kunst efter 1901",
+		"Sal 301C":	"Dansk og International Kunst efter 1902",
+		"Sal 301D":	"Dansk og International Kunst efter 1903",
+		"Sal 302A":	"Dansk og International Kunst efter 1904",
+		"Sal 302B":	"Dansk og International Kunst efter 1905",
+		"Sal 302C":	"Dansk og International Kunst efter 1906",
+
+						
 		"default":	"samlinger"					        
     }
   }
