Detail: add click on picture -> fancybox.js

--- a/pi1/language/language.json
+++ b/pi1/language/language.json
@@ -445,81 +445,81 @@
   
   "collections": {
     "en": {
-		"Sal 100":	"Information area",
+		"Sal 100":	"Information desk",
 		"Sal 111":	"Conservators work space",
 		"Sal 114":	"x-rummet",
 		"Sal 116":	"The children’s exhibition",
 		"Sal 120":	"Special exhibition",
 		"Sal 200":	"Corridor",
 		"Sal 201A":	"European Art 1300-1800",
-		"Sal 201B":	"European Art 1300-1801",
-		"Sal 201C":	"European Art 1300-1802",
-		"Sal 201D":	"European Art 1300-1803",
-		"Sal 201E":	"European Art 1300-1804",
-		"Sal 202 foer 2006":      "European Art 1300-1805",
-		"Sal 202":	"European Art 1300-1806",
-		"Sal 203":	"European Art 1300-1807",
-		"Sal 204":	"European Art 1300-1808",
-		"Sal 205":	"European Art 1300-1809",
-		"Sal 206":	"European Art 1300-1810",
-		"Sal 207":	"European Art 1300-1811",
-		"Sal 208A":	"European Art 1300-1812",
-		"Sal 208B":	"European Art 1300-1813",
-		"Sal 209 ":	"European Art 1300-1814",
-		"Sal 210A":	"European Art 1300-1815",
-		"Sal 210B":	"European Art 1300-1816",
-		"Sal 211A":	"European Art 1300-1817",
-		"Sal 211B":	"European Art 1300-1818",
+		"Sal 201B":	"European Art 1300-1800",
+		"Sal 201C":	"European Art 1300-1800",
+		"Sal 201D":	"European Art 1300-1800",
+		"Sal 201E":	"European Art 1300-1800",
+		"Sal 202 foer 2006":      "European Art 1300-1800",
+		"Sal 202":	"European Art 1300-1800",
+		"Sal 203":	"European Art 1300-1800",
+		"Sal 204":	"European Art 1300-1800",
+		"Sal 205":	"European Art 1300-1800",
+		"Sal 206":	"European Art 1300-1800",
+		"Sal 207":	"European Art 1300-1800",
+		"Sal 208A":	"European Art 1300-1800",
+		"Sal 208B":	"European Art 1300-1800",
+		"Sal 209 ":	"European Art 1300-1800",
+		"Sal 210A":	"European Art 1300-1800",
+		"Sal 210B":	"European Art 1300-1800",
+		"Sal 211A":	"European Art 1300-1800",
+		"Sal 211B":	"European Art 1300-1800",
 		"Sal 212":	"French Art 1900-1930",
-		"Sal 213":	"French Art 1900-1931",
-		"Sal 214":	"French Art 1900-1932",
-		"Sal 215":	"French Art 1900-1933",
-		"Sal 216":	"French Art 1900-1934",
+		"Sal 213":	"French Art 1900-1930",
+		"Sal 214":	"French Art 1900-1930",
+		"Sal 215":	"French Art 1900-1930",
+		"Sal 216":	"French Art 1900-1930",
 		"Sal 217A":	"Danish and Nordic Art 1750-1900",
-		"Sal 217B":	"Danish and Nordic Art 1750-1901",
-		"Sal 217C":	"Danish and Nordic Art 1750-1902",
-		"Sal 217D":	"Danish and Nordic Art 1750-1903",
-		"Sal 217E":	"Danish and Nordic Art 1750-1904",
-		"Sal 217F":	"Danish and Nordic Art 1750-1905",
-		"Sal 218A":	"Danish and Nordic Art 1750-1906",
-		"Sal 218B":	"Danish and Nordic Art 1750-1907",
-		"Sal 219":	"Danish and Nordic Art 1750-1908",
-		"Sal 220":	"Danish and Nordic Art 1750-1909",
-		"Sal 221":	"Danish and Nordic Art 1750-1910",
-		"Sal 222":	"Danish and Nordic Art 1750-1911",
-		"Sal 223":	"Danish and Nordic Art 1750-1912",
-		"Sal 224":	"Danish and Nordic Art 1750-1913",
-		"Sal 225":	"Danish and Nordic Art 1750-1914",
-		"Sal 226":	"Danish and Nordic Art 1750-1915",
-		"Sal 227":	"Danish and Nordic Art 1750-1916",
-		"Sal 228":	"Danish and Nordic Art 1750-1917",
-		"Sal 229":	"Danish and Nordic Art 1750-1918",
+		"Sal 217B":	"Danish and Nordic Art 1750-1900",
+		"Sal 217C":	"Danish and Nordic Art 1750-1900",
+		"Sal 217D":	"Danish and Nordic Art 1750-1900",
+		"Sal 217E":	"Danish and Nordic Art 1750-1900",
+		"Sal 217F":	"Danish and Nordic Art 1750-1900",
+		"Sal 218A":	"Danish and Nordic Art 1750-1900",
+		"Sal 218B":	"Danish and Nordic Art 1750-1900",
+		"Sal 219":	"Danish and Nordic Art 1750-1900",
+		"Sal 220":	"Danish and Nordic Art 1750-1900",
+		"Sal 221":	"Danish and Nordic Art 1750-1900",
+		"Sal 222":	"Danish and Nordic Art 1750-1900",
+		"Sal 223":	"Danish and Nordic Art 1750-1900",
+		"Sal 224":	"Danish and Nordic Art 1750-1900",
+		"Sal 225":	"Danish and Nordic Art 1750-1900",
+		"Sal 226":	"Danish and Nordic Art 1750-1900",
+		"Sal 227":	"Danish and Nordic Art 1750-1900",
+		"Sal 228":	"Danish and Nordic Art 1750-1900",
+		"Sal 229":	"Danish and Nordic Art 1750-190",
 		"Sal 260":	"Danish and International Art after 1900",
-		"Sal 261":	"Danish and International Art after 1901",
-		"Sal 262":	"Danish and International Art after 1902",
-		"Sal 263A":	"Danish and International Art after 1903",
-		"Sal 263B":	"Danish and International Art after 1904",
-		"Sal 263C":	"Danish and International Art after 1905",
-		"Sal 264":	"Danish and International Art after 1906",
-		"Sal 264A 2006 - 2011":	"Danish and International Art after 1907",
-		"Sal 265":	"Danish and International Art after 1908",
-		"Sal 266":	"Danish and International Art after 1909",
-		"Sal 268A":	"Danish and International Art after 1910",
-		"Sal 268B":	"Danish and International Art after 1911",
-		"Sal 269A":	"Danish and International Art after 1912",
-		"Sal 269B":	"Danish and International Art after 1913",
-		"Sal 270A":	"Danish and International Art after 1914",
-		"Sal 270B":	"Danish and International Art after 1915",
-		"Sal 272":	"Danish and International Art after 1916",
+		"Sal 261":	"Danish and International Art after 1900",
+		"Sal 262":	"Danish and International Art after 1900",
+		"Sal 263A":	"Danish and International Art after 1900",
+		"Sal 263B":	"Danish and International Art after 1900",
+		"Sal 263C":	"Danish and International Art after 1900",
+		"Sal 264":	"Danish and International Art after 1900",
+		"Sal 264A 2006 - 2011":	"Danish and International Art after 1900",
+		"Sal 265":	"Danish and International Art after 1900",
+		"Sal 266":	"Danish and International Art after 1900",
+		"Sal 268A":	"Danish and International Art after 1900",
+		"Sal 268B":	"Danish and International Art after 1900",
+		"Sal 269A":	"Danish and International Art after 1900",
+		"Sal 269B":	"Danish and International Art after 1900",
+		"Sal 270A":	"Danish and International Art after 1900",
+		"Sal 270B":	"Danish and International Art after 1900",
+		"Sal 272":	"Danish and International Art after 1900",
 		"Sal 300A":	"Wilhelm Freddie Room",
 		"Sal 300B":	"Wilhelm Freddie Room",
 		"Sal 301A":	"Danish and International Art after 1900",
-		"Sal 301B":	"Danish and International Art after 1901",
-		"Sal 301C":	"Danish and International Art after 1902",
-		"Sal 301D":	"Danish and International Art after 1903",
-		"Sal 302A":	"Danish and International Art after 1904",
-		"Sal 302B":	"Danish and International Art after 1905",
-		"Sal 302C":	"Danish and International Art after 1906",
+		"Sal 301B":	"Danish and International Art after 1900",
+		"Sal 301C":	"Danish and International Art after 1900",
+		"Sal 301D":	"Danish and International Art after 1900",
+		"Sal 302A":	"Danish and International Art after 1900",
+		"Sal 302B":	"Danish and International Art after 1900",
+		"Sal 302C":	"Danish and International Art after 1900",
 				
 		"default":	"collections"
 				
@@ -527,81 +527,81 @@
     },
     "dk": {
 				
-		"Sal 100":	"Forhallen/information",
+		"Sal 100":	"Forhallen",
 		"Sal 111":	"Konservator v&aelig;rksted",
 		"Sal 114":	"x-rummet",
 		"Sal 116":	"B&oslash;rnenes udstilling",
 		"Sal 120":	"S&aelig;rudstilling",
 		"Sal 200":	"Rundgangen",
 		"Sal 201A":	"Europ&aelig;isk Kunst 1300-1800",
-		"Sal 201B":	"Europ&aelig;isk Kunst 1300-1801",
-		"Sal 201C":	"Europ&aelig;isk Kunst 1300-1802",
-		"Sal 201D":	"Europ&aelig;isk Kunst 1300-1803",
-		"Sal 201E":	"Europ&aelig;isk Kunst 1300-1804",
-		"Sal 202 foer 2006":      "Europ&aelig;isk Kunst 1300-1805",
-		"Sal 202":	"Europ&aelig;isk Kunst 1300-1806",
-		"Sal 203":	"Europ&aelig;isk Kunst 1300-1807",
-		"Sal 204":	"Europ&aelig;isk Kunst 1300-1808",
-		"Sal 205":	"Europ&aelig;isk Kunst 1300-1809",
-		"Sal 206":	"Europ&aelig;isk Kunst 1300-1810",
-		"Sal 207":	"Europ&aelig;isk Kunst 1300-1811",
-		"Sal 208A":	"Europ&aelig;isk Kunst 1300-1812",
-		"Sal 208B":	"Europ&aelig;isk Kunst 1300-1813",
-		"Sal 209 ":	"Europ&aelig;isk Kunst 1300-1814",
-		"Sal 210A":	"Europ&aelig;isk Kunst 1300-1815",
-		"Sal 210B":	"Europ&aelig;isk Kunst 1300-1816",
-		"Sal 211A":	"Europ&aelig;isk Kunst 1300-1817",
-		"Sal 211B":	"Europ&aelig;isk Kunst 1300-1818",
+		"Sal 201B":	"Europ&aelig;isk Kunst 1300-1800",
+		"Sal 201C":	"Europ&aelig;isk Kunst 1300-1800",
+		"Sal 201D":	"Europ&aelig;isk Kunst 1300-1800",
+		"Sal 201E":	"Europ&aelig;isk Kunst 1300-1800",
+		"Sal 202 foer 2006":      "Europ&aelig;isk Kunst 1300-1800",
+		"Sal 202":	"Europ&aelig;isk Kunst 1300-1800",
+		"Sal 203":	"Europ&aelig;isk Kunst 1300-1800",
+		"Sal 204":	"Europ&aelig;isk Kunst 1300-1800",
+		"Sal 205":	"Europ&aelig;isk Kunst 1300-1800",
+		"Sal 206":	"Europ&aelig;isk Kunst 1300-1800",
+		"Sal 207":	"Europ&aelig;isk Kunst 1300-1800",
+		"Sal 208A":	"Europ&aelig;isk Kunst 1300-1800",
+		"Sal 208B":	"Europ&aelig;isk Kunst 1300-1800",
+		"Sal 209 ":	"Europ&aelig;isk Kunst 1300-1800",
+		"Sal 210A":	"Europ&aelig;isk Kunst 1300-1800",
+		"Sal 210B":	"Europ&aelig;isk Kunst 1300-1800",
+		"Sal 211A":	"Europ&aelig;isk Kunst 1300-1800",
+		"Sal 211B":	"Europ&aelig;isk Kunst 1300-1800",
 		"Sal 212":	"Fransk Kunst 1900-1930",
-		"Sal 213":	"Fransk Kunst 1900-1931",
-		"Sal 214":	"Fransk Kunst 1900-1932",
-		"Sal 215":	"Fransk Kunst 1900-1933",
-		"Sal 216":	"Fransk Kunst 1900-1934",
+		"Sal 213":	"Fransk Kunst 1900-1930",
+		"Sal 214":	"Fransk Kunst 1900-1930",
+		"Sal 215":	"Fransk Kunst 1900-1930",
+		"Sal 216":	"Fransk Kunst 1900-1930",
 		"Sal 217A":	"Dansk og Nordisk Kunst 1750-1900",
-		"Sal 217B":	"Dansk og Nordisk Kunst 1750-1901",
-		"Sal 217C":	"Dansk og Nordisk Kunst 1750-1902",
-		"Sal 217D":	"Dansk og Nordisk Kunst 1750-1903",
-		"Sal 217E":	"Dansk og Nordisk Kunst 1750-1904",
-		"Sal 217F":	"Dansk og Nordisk Kunst 1750-1905",
-		"Sal 218A":	"Dansk og Nordisk Kunst 1750-1906",
-		"Sal 218B":	"Dansk og Nordisk Kunst 1750-1907",
-		"Sal 219":	"Dansk og Nordisk Kunst 1750-1908",
-		"Sal 220":	"Dansk og Nordisk Kunst 1750-1909",
-		"Sal 221":	"Dansk og Nordisk Kunst 1750-1910",
-		"Sal 222":	"Dansk og Nordisk Kunst 1750-1911",
-		"Sal 223":	"Dansk og Nordisk Kunst 1750-1912",
-		"Sal 224":	"Dansk og Nordisk Kunst 1750-1913",
-		"Sal 225":	"Dansk og Nordisk Kunst 1750-1914",
-		"Sal 226":	"Dansk og Nordisk Kunst 1750-1915",
-		"Sal 227":	"Dansk og Nordisk Kunst 1750-1916",
-		"Sal 228":	"Dansk og Nordisk Kunst 1750-1917",
-		"Sal 229":	"Dansk og Nordisk Kunst 1750-1918",
+		"Sal 217B":	"Dansk og Nordisk Kunst 1750-1900",
+		"Sal 217C":	"Dansk og Nordisk Kunst 1750-1900",
+		"Sal 217D":	"Dansk og Nordisk Kunst 1750-1900",
+		"Sal 217E":	"Dansk og Nordisk Kunst 1750-1900",
+		"Sal 217F":	"Dansk og Nordisk Kunst 1750-1900",
+		"Sal 218A":	"Dansk og Nordisk Kunst 1750-1900",
+		"Sal 218B":	"Dansk og Nordisk Kunst 1750-1900",
+		"Sal 219":	"Dansk og Nordisk Kunst 1750-1900",
+		"Sal 220":	"Dansk og Nordisk Kunst 1750-1900",
+		"Sal 221":	"Dansk og Nordisk Kunst 1750-1900",
+		"Sal 222":	"Dansk og Nordisk Kunst 1750-1900",
+		"Sal 223":	"Dansk og Nordisk Kunst 1750-1900",
+		"Sal 224":	"Dansk og Nordisk Kunst 1750-1900",
+		"Sal 225":	"Dansk og Nordisk Kunst 1750-1900",
+		"Sal 226":	"Dansk og Nordisk Kunst 1750-1900",
+		"Sal 227":	"Dansk og Nordisk Kunst 1750-1900",
+		"Sal 228":	"Dansk og Nordisk Kunst 1750-1900",
+		"Sal 229":	"Dansk og Nordisk Kunst 1750-1900",
 		"Sal 260":	"Dansk og International Kunst efter 1900",
-		"Sal 261":	"Dansk og International Kunst efter 1901",
-		"Sal 262":	"Dansk og International Kunst efter 1902",
-		"Sal 263A":	"Dansk og International Kunst efter 1903",
-		"Sal 263B":	"Dansk og International Kunst efter 1904",
-		"Sal 263C":	"Dansk og International Kunst efter 1905",
-		"Sal 264":	"Dansk og International Kunst efter 1906",
-		"Sal 264A 2006 - 2011":	"Dansk og International Kunst efter 1907",
-		"Sal 265":	"Dansk og International Kunst efter 1908",
-		"Sal 266":	"Dansk og International Kunst efter 1909",
-		"Sal 268A":	"Dansk og International Kunst efter 1910",
-		"Sal 268B":	"Dansk og International Kunst efter 1911",
-		"Sal 269A":	"Dansk og International Kunst efter 1912",
-		"Sal 269B":	"Dansk og International Kunst efter 1913",
-		"Sal 270A":	"Dansk og International Kunst efter 1914",
-		"Sal 270B":	"Dansk og International Kunst efter 1915",
-		"Sal 272":	"Dansk og International Kunst efter 1916",
+		"Sal 261":	"Dansk og International Kunst efter 1900",
+		"Sal 262":	"Dansk og International Kunst efter 1900",
+		"Sal 263A":	"Dansk og International Kunst efter 1900",
+		"Sal 263B":	"Dansk og International Kunst efter 1900",
+		"Sal 263C":	"Dansk og International Kunst efter 1900",
+		"Sal 264":	"Dansk og International Kunst efter 1900",
+		"Sal 264A 2006 - 2011":	"Dansk og International Kunst efter 1900",
+		"Sal 265":	"Dansk og International Kunst efter 1900",
+		"Sal 266":	"Dansk og International Kunst efter 1900",
+		"Sal 268A":	"Dansk og International Kunst efter 1900",
+		"Sal 268B":	"Dansk og International Kunst efter 1900",
+		"Sal 269A":	"Dansk og International Kunst efter 1900",
+		"Sal 269B":	"Dansk og International Kunst efter 1900",
+		"Sal 270A":	"Dansk og International Kunst efter 1900",
+		"Sal 270B":	"Dansk og International Kunst efter 1900",
+		"Sal 272":	"Dansk og International Kunst efter 1900",
 		"Sal 300A":	"Wilhelm Freddie-Rum",
 		"Sal 300B":	"Wilhelm Freddie-Rum",
 		"Sal 301A":	"Dansk og International Kunst efter 1900",
-		"Sal 301B":	"Dansk og International Kunst efter 1901",
-		"Sal 301C":	"Dansk og International Kunst efter 1902",
-		"Sal 301D":	"Dansk og International Kunst efter 1903",
-		"Sal 302A":	"Dansk og International Kunst efter 1904",
-		"Sal 302B":	"Dansk og International Kunst efter 1905",
-		"Sal 302C":	"Dansk og International Kunst efter 1906",
+		"Sal 301B":	"Dansk og International Kunst efter 1900",
+		"Sal 301C":	"Dansk og International Kunst efter 1900",
+		"Sal 301D":	"Dansk og International Kunst efter 1900",
+		"Sal 302A":	"Dansk og International Kunst efter 1900",
+		"Sal 302B":	"Dansk og International Kunst efter 1900",
+		"Sal 302C":	"Dansk og International Kunst efter 1900",
 
 						
 		"default":	"samlinger"					        
