--- a/pi1/language/language.json
+++ b/pi1/language/language.json
@@ -274,7 +274,7 @@
 	  "teaser_on_display": 		"kan ses p&aring; museet",
 	  "teaser_last_update":		"sidst opdateret",
 	  
-	  "thumbs_label":	 		"delv&aelig;rker",
+	  "thumbs_label":	 		"V&aelig;rkets dele",
 	  
 	  "amerikansk":				"amerikansk",
 		"belgisk":				"belgisk",
