unique URL: req/view/category v1.0

--- a/pi1/language/language.json
+++ b/pi1/language/language.json
@@ -16,7 +16,7 @@
 	  "category_news" : 		"news",
 	  "category_calendar" : 	"calendar",
 	  "category_article" : 		"article",
-	  "category_info" : 		"visiting info",
+	  "category_info" : 		"visiting information",
 	  "category_all" :	 		"all results",
 	  
 	  "detail_technique":		"technique",
