--- a/pi1/language/language.json
+++ b/pi1/language/language.json
@@ -11,7 +11,12 @@
 	  "tagCloud_period": 		"period",
 	  "tagCloud_country": 		"nationality",
 	  "tagCloud_art_type": 		"technique",
-      
+	  
+	  "search_artist_name_ss_lab": 		"Filter artist",
+	  "search_object_production_century_earliest_lab": 		"Filter period",
+	  "search_artist_natio_lab": 	"Filter nationality",
+	  "search_object_type_lab":	"Filter technique",
+
       "category_artwork" : 		"artworks",
 	  "category_news" : 		"news",
 	  "category_calendar" : 	"calendar",
@@ -39,7 +44,7 @@
 	  "related_reference":		"reference",
 	  "related_label":			"related artworks",
 	  
-	  "search_box_default":		"Search artwork, title, artist, visiting info etc...",
+	  "search_box_default":		"Enter search phrase",
 	  "search_box_button":		"search",
 	  
 	  "search_filter_cent":		" c.",
@@ -234,6 +239,11 @@
       "tagCloud_period": 		"periode",
       "tagCloud_country": 		"nationalitet",
       "tagCloud_art_type": 		"teknik",
+          
+      "search_artist_name_ss_lab": 		"Filtrere kunstner",
+      "search_object_production_century_earliest_lab": 		"Filtrere periode",
+      "search_artist_natio_lab": 	"Filtrere kunstners nationalitet",
+      "search_object_type_lab":	"Filtrere teknik",
       
       "category_artwork" : 		"v&aelig;rker",
 	  "category_news" : 		"nyheder",
@@ -262,7 +272,7 @@
 	  "related_reference":		"inv.num",
 	  "related_label":			"relaterede v&aelig;rker",
 	  	  
-	  "search_box_default":		"S&oslash;g efter kunstv&aelig;rker, titel, kunstner, nyheder osv.",
+	  "search_box_default":		"Skriv s&oslash;geord her",
 	  "search_box_button":		"s&oslash;g",
 	  
 	  "search_filter_cent":		"tallet",
